--- a/libfb/libfb.3
+++ b/libfb/libfb.3
@@ -445,7 +445,7 @@ and
 .IR fb_write\^
 return the number of pixels actually read or written.
 .IR fb_gettype\^
-returns a pointer to NULL terminated a description string.
+returns a pointer to a NULL terminated description string.
 .SH AUTHORS
 Gary S. Moss
 .br
