--- a/fb/fbgrid.1
+++ b/fb/fbgrid.1
@@ -1,40 +1,55 @@
-.TH FBGRID 1V VMB
-'\"	last edit:	85/04/22	G. S. Moss
-'\"	SCCS ID:	@(#)fbgrid.1	1.2
+.TH FBGRID 1 BRL/CAD
 .SH NAME
 fbgrid \- draw a grid on a frame buffer
 .SH SYNOPSIS
 .B fbgrid
-[
-.B \-h
-]
+.RB [ \-hcbdo ]
 .SH DESCRIPTION
 .I Fbgrid\^
-is used to generate a grid on a frame buffer for purposes of aligning the
-monitor.
-By default, the device
-.B /dev/ik0l
-is assumed.
-This may be changed by setting the environment
+is used to generate a grid on a frame buffer.
+The environment
 variable
 .B
 .SM FB_FILE
-to the name of another device or file name
-and exporting it before execution of 
-.IR fbgrid\^ .
+is used to select the display device (see
+.IR brlcad (1)).
+If this variable is not set, the default device for your system will
+be used.
 If the
 .B \-h
 option is used, a
-.SM
-.B HIRES
-(1024x1024x24) grid is written;
+1024x1024 grid is written;
 otherwise a
-.SM
-.B LORES
-(512x512x24) device is assumed.
-.SH FILE
-/vld/lib/libfb.a
-.SH AUTHORS
-Gary S. Moss, BRL-VLD
+512x512 device is assumed.
 .br
-Michael John Muuss, BRL-SECAD
+.B \-c
+will clear the screen before drawing.
+.PP
+The available patterns are:
+.br
+.B \-b
+for binary spacing with lines at 8, 64, and 128 line intervals.
+.br
+.B \-d
+for decimal spacing with lines at 10, 50, and 100 line intervals
+(the default).
+.br
+.B \-o
+for the old cross grid pattern.
+.SH "SEE ALSO"
+brlcad(1), fbpoint(1), fbzoom(1), fbframe(1)
+.SH AUTHORS
+Phillip Dykstra
+.br
+Gary S. Moss
+.br
+Michael John Muuss
+.SH SOURCE
+SECAD/VLD Computing Consortium, Bldg 394
+.br
+The U. S. Army Ballistic Research Laboratory
+.br
+Aberdeen Proving Ground, Maryland  21005
+.SH "BUG REPORTS"
+Reports of bugs or problems should be submitted via electronic
+mail to <CAD@BRL.ARPA>.
