--- a/util/loop.1
+++ b/util/loop.1
@@ -1,40 +1,55 @@
-.TH LOOP 1B BRL/CAD
+.TH LOOP 1 BRL/CAD
 .SH NAME
 loop \- generate integer indices for shell loops, etc
 .SH SYNOPSIS
 .B loop
-.B start
-.B finish
-[
-.B increment
-]
+start finish [increment]
 .SH DESCRIPTION
-.I loop\^
+.I Loop\^
 generates a sequence of integers between
-.B start
+.I start
 and
-.B finish
+.I finish
 inclusive, one per line, on stdout.
 This is mostly useful for driving loops when writing Shell programs
 .IR sh (1).
 The default increment is +1 when start<finish, and -1 when start>finish.
 An optional
-.B increment
+.I increment
 may be specified.
 If
-.B increment
+.I increment
 is zero, then the
-.B start
+.I start
 value will be generated continuously.
-.SH AUTHORS
-Phil Dykstra
-.br
-Douglas P. Kingston III
-.br
-Michael John Muuss
+.SH EXAMPLE
+\fI
+.nf
+for i in `loop 10 30 5`
+do
+  echo $i
+done
+.fi
+\fP
+Will display the values 10, 15, 20, 25, and 30.
 .SH BUGS
 This program just scratches the surface.
 The shells could benefit from a greater ability to perform math.
 Limitless opportunities for extensions exist, but
 this simple version is adequate for most shell scripts
 dealing with sequences of images, etc.
+.SH AUTHORS
+Phillip Dykstra
+.br
+Douglas P. Kingston III
+.br
+Michael John Muuss
+.SH SOURCE
+SECAD/VLD Computing Consortium, Bldg 394
+.br
+The U. S. Army Ballistic Research Laboratory
+.br
+Aberdeen Proving Ground, Maryland  21005
+.SH "BUG REPORTS"
+Reports of bugs or problems should be submitted via electronic
+mail to <CAD@BRL.ARPA>.
