--- a/README
+++ b/README
@@ -221,17 +221,7 @@ Also note that when \fBfloat\fR is 32-bit IEEE or IBM style floating
 point, not enough accuracy is carried to correctly process large models.
 See the "Silicon Graphics Warnings" section for more information.
 .sp
-3)  The file "rt/Makefile.loc" MUST be edited for the benchmark run, to
-turn off various random effects, which if left enabled would make
-comparison to reference files impossible. Be certain to uncomment the
-line which reads:
-.sp
-.nf
-.ta 0.5i 1.5i
-	CONFIGDEFS	= -DBENCHMARK
-.fi
-.sp
-4)  It is important to run "make depend" in the top directory of the
+3)  It is important to run "make depend" in the top directory of the
 distribution each time these Makefiles are changed.  For libfb, mged,
 and librt, it is also necessary to run "make clean" in those directories
 after making related changes to the Makefiles, because the binaries
@@ -297,12 +287,16 @@ nrtc-785	VAX 785, FPA, VMS+Eunice_4.1
 utah-gr		VAX 785, FPA, 4.3 BSD
 nrtc-dryer	Ridge 330, ROS
 ardec-3	Pyramid 90Mx, Dual-CPU, OSx 2.5, 16 Mbytes
+elxsi-m1	Elxsi 6410, BSD 4.2 16 MB
+elxsi-gnu	Elxsi 6420, BSD 4.2 16 MB
+elxsi-gnuy	Elxsi 6420, Sys Vr2, 16MB
 brl-spark	Gould PN 9050, no MACC, UTX 1.2, 2x4Mb mem boards
 brl-vmb	Gould PN 9080, no MACCs, UTX 2.0, 12x1Mb mem boards
 amsaa-seer	Gould PN 9080, w/MACCs, UTX 2.0, 4x4Mb mem boards
 c1east	Convex C1 XP (2 IOPs, 4 Multibus, 4-way disk striping, 64 Mbytes), Convex Unix 6.0.1.12
 utah-ug	VAX 8600, FPA, 4.3 BSD
 brl-vector	Alliant FX/8 (8 CEs, 6 IPs, 32 Mbytes), Concentrix 2.0
+alliant		Alliant FX/8 (8 CEs, 9 IPs, 64 Mbytes), Concentrix 3.0
 hep		Denelcor HEP, 4 PEMs
 nrl-xmp	Cray X-MP/12, COS V115, 9.5ns clock
 snm2	Cray 1-M, SN2, UNICOS 2.0
@@ -328,15 +322,18 @@ _
  103.8	  148.2	  1.32	vortac
  134.3	  191.8	  1.71	utah-gr
  158.6	  226.5	  2.02	nrtc-dryer
+ 266.7	  380.5	  3.39	elxsi-m1
  269.4	  384.7	  3.43	brl-spark, UTX 1.2
  289.5	  413.4	  3.69	brl-spark, UTX 2.0
  289.9	  413.9	  3.69	brl-vmb, UTX 2.0
  318.5	  454.8	  4.06	c1east, Convex Unix 6.0.1.12, vanilla cc
  332.6	  460.7	  4.11	amsaa-seer, UTX 2.0
  345.2	  492.9	  4.40	brl-vector, 1 CE, no vectors (1.00X)
+ 364.5	  520.6	  4.64	elxsi-gnu BSD 4.2
  364.9	  521.1	  4.64	utah-ug
  365.3	  521.6	  4.66	c1east, Convex Unix 6.0.1.12, vc -O1 (scalar)
  365.9	  527.7	  4.71	c1east, Convex Unix 6.0.1.12, vc -O2 (vector)
+ 451.5	  644.7	  5.75	elxsi-gnuy SysV
  679.8	  904.9	  8.07	brl-vector, 2 CEs, no vectors (1.84X)
 1018.2	 1375.5	 12.27	brl-vector, 3 CEs, no vectors (2.79X)
 1309.5	 1813.5	 16.17	brl-vector, 4 CEs, no vectors (3.68X)
@@ -348,6 +345,7 @@ _
 2330.7	3248.8	28.98	brl-vector, 7 CEs, no vectors (6.5X)
 2418.3	 3453.3	 30.81	brl-patton, 1 CPU, no vectors, no optim (1.00X)
 2632.2	3677.3	32.8	brl-vector, 8 CEs, no vecotrs (7.46X)
+2786.0	3972.9	35.44	alliant, 8 CEs, no vectors
 2840.3	  	 36.18	hep, 1 PEM, npsw=40
 4802.1	 6856.5	 61.16	brl-patton, 2 CPUs, no vectors, no optim (1.99X)
 7148.1	10205.1	 91.04	brl-patton, 3 CPUs, no vectors, no optim (2.96X)
@@ -371,12 +369,15 @@ _
   59.6	  105.8	1.66	utah-gr
  128.5	  228.0		brl-vector, 1 CE, no vectors
  130.7	  232.0		brl-spark, UTX 2.0
+ 131.1	  232.2	3.97	elxsi-m1
  131.5	  233.4		brl-vmb, UTX 2.0
  142.2	  252.4	3.97	c1east, Convex Unix 6.0.1.12, vanilla cc
  148.3	  263.2		amsaa-seer, UTX 2.0
  160.8	  285.3	4.49	c1east, Convex Unix 6.0.1.12, vc -O1 (scalar)
  161.9	  287.4	4.52	c1east, Convex Unix 6.0.1.12, vc -O2 (vector)
  164.6	  292.1	4.59	utah-cs
+ 177.7	  315.4	4.96	elxsi-gnu BSD 4.2
+ 196.8	  349.3	5.49	elxsi-gnuy SysV
  257.3	  424.6		brl-vector, 2 CEs, no vectors
  379.1	  650.0		brl-vector, 3 CEs, no vectors
  491.3	  845.5		brl-vector, 4 CEs, no vectors
@@ -385,6 +386,7 @@ _
  853.3	 1514.3		brl-patton, 1 CPU, no vectors
  880.42	 1533.0	24.1	brl-vector, 7 CEs, no vectors
  987.62	 1724.2	27.1	brl-vector, 8 CEs, no vectors
+ 1039.2	 1840.0	28.93	alliant, 8 CEs, no vectors
 .TE
 .fi
 .sp
@@ -403,6 +405,7 @@ _
   55.1	   65.8		vortac
   75.2	   89.9	 1.64	utah-gr
  150.6	  180.0		brl-vector, 1 CE, no vectors (1.00X)
+ 171.4	  204.8	 3.72	elxsi-m1
  172.0	  205.6	 3.74	c1east, Convex Unix 6.0.1.12, vanilla cc
  176.2	  210.6		brl-vmb, UTX 2.0
  178.8	  213.8		brl-spark, UTX 2.0
@@ -410,6 +413,8 @@ _
  192.9	  230.5	 4.20	c1east, Convex Unix 6.0.1.12, vc -O1 (scalar)
  198.7	  237.4	 4.32	utah-cs
  206.5	  246.8		amsaa-seer, UTX 2.0
+ 221.3	  264.4	 4.81	elxsi-gnu BSD 4.2
+ 221.4	  264.6	 4.81	elxsi-gnuy SysV
  294.1	  349.3		brl-vector, 2 CE, no vectors (1.94X)
  443.4	  523.4		brl-vector, 3 CE, no vectors (2.91X)
  577.9	  686.0		brl-vector, 4 CEs, no vectors (3.81X)
@@ -418,6 +423,7 @@ _
 1035.2	 1232.3	22.4	brl-vector, 7 CEs, no vectors (6.85X)
 1063.7	 1271.2		brl-patton, 1 CPU, no vectors (1.00X)
 1153.8	 1375.4	25	brl-vector, 8 CEs, no vectors (7.64X)
+1219.9	 1457.2	26.49	alliant, 8 CEs, no vectors
 2110.6	 2522.2		brl-patton, 2 CPUs, no vectors (1.98X)
 3138.2	 3749.9		brl-patton, 3 CPUs, no vectors (2.95X)
 4147.1	 4955.6		brl-patton, 4 CPUs, no vectors (3.90X)
@@ -438,6 +444,7 @@ _
   58.2	   86.5	 1.71	utah-gr
   68.8	  102.3	 2.02	brl-vista
  105.7	  157.1	 3.10	brl-vector, 1 CE, no vectors (1.00X)
+ 127.4	  189.3	 3.73	elxsi-m1
  129.4	  192.3	 3.80	c1east, Convex Unix 6.0.1.12, vanilla cc
  141.3	  210.0	 4.14	c1east, Convex Unix 6.0.1.12, vc -O2 (vector)
  142.6	  211.9	 4.18	brl-spark, UTX 2.0
@@ -445,6 +452,8 @@ _
  144.7	  215.1	 4.24	c1east, Convex Unix 6.0.1.12, vc -O1 (scalar)
  145.5	  216.2	 4.27	utah-cs
  162.2	  241.0	 4.75	amsaa-seer, UTX 2.0
+ 162.8	  242.0	 4.77	elxsi-gnu BSD 4.2
+ 162.9	  242.1	 4.77	elxsi-gnu SysV
  210.6	  312.6	 6.17	brl-vector, 2 CEs, no vectors (1.98X)
  310.9	  459.9	 9.07	brl-vector, 3 CEs, no vectors (2.93X)
  405.2	  600.7	11.85	brl-vector, 4 CEs, no vectors (3.82X)
@@ -453,7 +462,7 @@ _
  691.2	 1027.3	20.26	brl-patton, 1 CPU, no vectors
  719.0	 1065.9	21	brl-vector, 7 CEs, no vectors (6.78X)
  814.6	 1208.4	23.83	brl-vector, 8 CEs, no vectors (7.69X)
-
+ 852.4	 1266.4	24.98	alliant, 8 CEs, no vectors
 .TE
 .fi
 .sp 2
@@ -606,8 +615,6 @@ display devices by default:
 center box;
 l l.
 plot	any UNIX-plot filter
-vg	Vector General 3300
-mg	Megatek 7250
 tek	Tektronix 4014 and family
 tek4109	Tektronix 4109
 .TE
@@ -617,7 +624,9 @@ when specifically configured:
 center box;
 l l.
 ir	SGI IRIS 2400, 3030
-sunpw	SUN 3.0 Pixwin
+sunpw	SUN 3.2 Pixwin
+vg	Vector General 3300
+mg	Megatek 7250
 rat	Raster Tech One/80
 ps	E&S Picture System 300
 mer	Megatek Merlin 9200 [Marginal]
@@ -680,7 +689,6 @@ on a UNIX system are these:
 	ed Makefile.defs
 	ed h/machine.h                  # defaults OK for 32-bit systems
 	ed Makefile			# to remove IF_REMOTE
-	ed rt/Makefile.loc		# remove BENCHMARK flag
 	ed rfbd/Makefile.loc		# configure rfbd
 	ed util/Makefile.loc		# if SYSV
 .sp
