--- a/util/mac-pix.1
+++ b/util/mac-pix.1
@@ -1,4 +1,4 @@
-.TH mac-pix 1 BRL/CAD
+.TH MAC-PIX 1 BRL/CAD
 .SH NAME
 mac-pix \- convert Apple MacPaint bitmap into pix(5) or bw(5) raster image
 .SH SYNOPSIS
