--- a/util/sun-pix.1
+++ b/util/sun-pix.1
@@ -1,4 +1,4 @@
-.TH sun-pix 1 BRL/CAD
+.TH SUN-PIX 1 BRL/CAD
 .SH NAME
 sun-pix \-
 convert Sun bitmaps from screendump(1) into pix(5) or bw(5) raster image
