--- a/fb/fbgamma.1
+++ b/fb/fbgamma.1
@@ -51,7 +51,7 @@ framebuffers which have different operating modes based on the
 display size.
 .SH THEORY
 The response of a typical monitor is non-linear with respect to
-input voltage.  To a fairly high degree a accuracy, the response
+input voltage.  To a fairly high degree of accuracy, the response
 can be expressed as:
 .sp 1
 display_intensity = input_voltage ^ gamma
